# lci

./: .clang-format  .cmake-format.py  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LCIConfig.cmake.in  LICENSE  Makefile  README.md  affinity.h  arr_hashtbl.h  cock_hashtbl.h  collective.h  common.h  config.h  config.mk  dir_000000_000001.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6de73482f12508884d764ec84d0f5679.html  dir_6de73482f12508884d764ec84d0f5679_dep.map  dir_6de73482f12508884d764ec84d0f5679_dep.md5  dir_b30fa20b735d31459092ceffc60055f9.html  dir_b30fa20b735d31459092ceffc60055f9_dep.map  dir_b30fa20b735d31459092ceffc60055f9_dep.md5  dir_da61e3e9a357748887e3ca8d7c5a0c16.html  dir_da61e3e9a357748887e3ca8d7c5a0c16_dep.map  dir_da61e3e9a357748887e3ca8d7c5a0c16_dep.md5  dir_ff3af07da3886bfdc9e45833e969a8b0.html  dir_ff3af07da3886bfdc9e45833e969a8b0_dep.map  dir_ff3af07da3886bfdc9e45833e969a8b0_dep.md5  doxygen_crawl.html  except.h  format.sh  graph_legend.html  hashtbl.h  index.html  (+36 more)
benchmarks/: CMakeLists.txt  Makefile  abt_fair.c  abt_fibo.c  abt_sync.h  abt_wait.c  abt_yield.c  abx_comm2.cxx  abx_comm2_order.cxx  abx_comm2_reorder.cxx  abx_comm4  abx_comm4.cxx  abx_comm42  abx_comm42.cxx  algather.cxx  algather_mpi.cxx  alloc.c  am.c  am.cxx  barrier.cxx  barrier_mpi.cxx  bench_config.h.in  bench_many2many_am.cpp  bench_omp.hpp  collective.cpp  comm.cxx  comm3  comm3.cxx  comm4  comm4.cxx  comm_exp.h  comm_order.cxx  comm_queue-inl.h  comm_queue.h  comm_reorder.cxx  compute.cxx  fair.cxx  fibo.c  fibo.cxx  fibo.sub  (+83 more)
benchmarks/archive/: Makefile  abt_fibo.c  abt_wait.c  abt_yield.c  comm_exp.h  fcond.c  fibo.c  hash.cxx  jacobi.c  jacobi_3d.c  jacobi_3d_pthread.c  lqueue.cxx  mpi_pt2pt.cpp  msgrate-threads.c  osu_mbw_mr.c  osu_pt2pt.c  packet.cxx  pingpong_mt.c  pingpong_mt_NN.c  pingpong_mt_NN_compute.c  pingpong_mt_NN_compute.cxx  pingpong_mt_NN_osu.c  pingpong_mt_t.c  pingpong_mt_t_osu.c  pingpong_ss.c  pingpong_waitall.c  pingpong_waitall_mt.c  pingpong_waitall_mt_osu.c  pingpong_waitall_osu.c  pool.cxx  put.c  queue_mpi.c  queue_mpi_msg.c  queue_mpi_put.c  queue_mpi_put_msg.c  queue_mt.c  rc_pingpong.c  run_intel.sh  server.c  server_64.c  (+5 more)
benchmarks/old/: abt_sync.h  abx_comm.cxx  abx_comm2.cxx  abx_comm4.cxx  abx_comm42.cxx  abx_comm_order.cxx  abx_comm_reorder.cxx  comm.cxx  comm3.cxx  comm4.cxx  comm_queue-inl.h  comm_queue.h  test_abx_comm2.sh
benchmarks/pt2pt/: CMakeLists.txt  bench_am_lat.cpp  bench_put_bw.cpp
benchmarks/resources/: CMakeLists.txt  bench_atomic.cpp  bench_cq.cpp  bench_cuda_memcpy.cu  bench_get_buffer_attr.cpp  bench_malloc.cpp  bench_matching_engine.cpp  bench_mem_reg.cpp  bench_memcpy.cpp  bench_memory.cpp  bench_packet_pool.cpp  util.hpp
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  LCI_1.7_log.doxy  changelog_1_7_3.md  changelog_1_7_4.md  changelog_1_7_5.md  changelog_1_7_6.md  changelog_1_7_7.md  changelog_1_7_8.md  changelog_1_7_9.md  doxygen.in  faq.md  mainpage.md.in  missing_api.doxy  overview.doxy  publish2gh-pages.sh.in  tutorial.md
doc/changelogs/: changelog_1_7_3.md
doc/details/: pmi_backend.md
doc/tutorial/: add_lci.md  install.md  quickstart.md
examples/: CMakeLists.txt  Makefile  algather.c  alreduce.c  alreduce2.c  barrier.c  bench_omp.hpp  buffer.c  comm_exp.h  darray.cpp  distributed_array.cpp  hello_world.c  hello_world.cpp  hello_world_am.cpp  helper_abt.h  helper_fult.h  helper_pth.h  ialreduce.c  ibarrier.c  ibarrier.cpp  init.c  init_mpi.c  malloc.c  many2many_random.cpp  nonblocking_barrier.cpp  parsec_comm.c  pingpong.c  pingpong_am_mt.cpp  pt2ptbc-self.c  pt2ptbc.c  pt2ptbc_cuda.cu  pt2ptbc_mt.cpp  pt2ptbc_mt2.cpp  pt2ptd-self.c  pt2ptd.c  pt2ptd_anyrank.c  pt2pti-self.c  pt2pti.c  pt2ptiq.c  pt2ptl_handler.c  (+48 more)
examples/MPI_LCI/: CMakeLists.txt  hello_world.cpp
examples/old/: ialreduce.c  ibarrier.c  pt2ptbc.c  pt2ptd.c  pt2ptiq.c  putb.c  putbc.c  puti.c  putl.c  putls.c  putm.c  putms.c  puts.c  putsam.c  putss.c  qlong.c  qmed.c  qmed_dup.c  qmed_dup_2hw.c  qshort.c  queue_2ep.c  queue_2hw.c  tag.c  tag_glob.c
lci/: CMakeLists.txt  lcii_config.h.in
lci/api/: lci.h  lci_config.h.in
lci/backend/: server.h
lci/datastructure/: lcm_aqueue.h  lcm_archive.h  lcm_dequeue.h
lci/log/: logger.c  logger.h
lci/pmi/: CMakeLists.txt  pmi_wrapper.c  pmi_wrapper_local.c  pmi_wrapper_mpi.c  pmi_wrapper_pmi1.c  pmi_wrapper_pmi2.c  pmi_wrapper_pmix.c  pmii_archive.h
lci/profile/: papi_wrapper.c  papi_wrapper.h  performance_counter.c  performance_counter.h  tracer.c  tracer.h
lci/runtime/: 1sided_primitive.c  2sided_primitive.c  backlog_queue.h  device.c  endpoint.c  env.c  lci.c  lcii.h  memory_registration.c  packet.h  packet_pool.c  packet_pool.h  progress.c  property_list.c  protocol.h  rendezvous.h
lci/sys/: lciu_malloc.h  lciu_misc.h
lci/unused/: glob.c  lcrq.h
lct/: CMakeLists.txt  lct.cpp  lcti.hpp  lcti_config.hpp.in
lct/api/: CMakeLists.txt  lct.h  lct_config.h.in
lct/args_parser/: args_parser.cpp
lct/data_structure/: CMakeLists.txt
lct/log/: logger.cpp
lct/pcounter/: pcounter.cpp
lct/pmi/: CMakeLists.txt  README.md  pmi_wrapper.cpp  pmi_wrapper.hpp  pmi_wrapper_file.cpp  pmi_wrapper_local.cpp  pmi_wrapper_mpi.cpp  pmi_wrapper_pmi1.cpp  pmi_wrapper_pmi2.cpp  pmi_wrapper_pmix.cpp  pmi_wrapper_tcp.cpp  pmii_archive.hpp
lct/tbarrier/: tbarrier.cpp
lct/tlptr/: tlptr.cpp  (+1 more)
src/: 1sided.c  CMakeLists.txt  Makefile  coll.c  config.c  cq.c  cuda_utils.c  debug.c  device.c  endpoint.c  env.c  ep.c  glob.c  handler.c  hang_detector.c  hashtable.c  init.c  init.cxx  irecv.cxx  isend.cxx  lc.c  lci.c  lci_internal.hpp  lcii_config.h.in  lcii_mem.c  lcii_rcache.c  lciu.c  lciu_thread.c  lcixx_internal.hpp  lcm_log.c  lcrq.c  log.c  long.c  medium.c  memory.c  memory.cxx  misc.c  monitor_thread.c  mpi.c  mpiv.c  (+23 more)
tests/: CMakeLists.txt  Makefile  all.cxx  comm_exp.h  fult.h  hash.cxx  hash.h  hash_test.h  lcit.h  pool.h  pool_test.h
(+8461 files in other folders)
